# slack-insights

./: .env.example  .gitignore  CHANGELOG.md  CHANNEL_IMPORT_GUIDE.md  CLAUDE.md  COMPARISON_AND_RECOMMENDATIONS.md  ENHANCED_ANALYSIS_V2.md  EXPANSION_DEMO.md  GROUPING_ENHANCEMENT.md  POC_NATURAL_LANGUAGE.md  README.md  START_HERE.md  UI_RESEARCH_PROMPT.md  WARP.md  coderabbit-review.txt  poc_chat_terminal.py  poc_chat_terminal_grouped.py  poc_chat_ui.py  pyproject.toml  requirements.txt  slack-insights-PRD.md  test_batch_100_prompt.py  test_channel_queries.md  test_grouping_poc.sh  users-T1YNKSBL5.txt  validate_extraction_fixes.py  validate_phase0.py
.agent-os/product/: decisions.md  mission.md  roadmap.md  tech-stack.md
.agent-os/research/: nicegui-best-practices.md  nicegui-framework-documentation.md
.agent-os/research/ui-options-2025-10/: DECISION.md  README.md  comparison-analysis.md  ui-research-claude.md  ui-research-grok.md  ui-research-openai.md
.agent-os/specs/2025-10-07-phase1-foundation-query-#1/: spec.md  tasks.md
.agent-os/specs/2025-10-08-nicegui-interface-#3/: README.md  (+2 more)
.cursor/rules/: hygiene-check.mdc
migrations/: 001_initial_schema.sql  002_add_display_names.sql
src/slack_insights/: __init__.py  backfill_display_names.py  cli.py  database.py  deduplication.py  extractor.py  nlq_engine.py  parser.py  query_engine.py  query_service.py  thread_context.py  user_lookup.py  utils.py
tests/: test_cli.py  test_database.py  test_extractor.py  test_integration.py  test_parser.py  test_query_engine.py  test_thread_context.py  test_user_lookup.py
(+15 files in other folders)
