[project]
name = "slack-insights"
version = "0.1.0"
description = "AI-powered action item extraction and querying for Slack conversations"
authors = [{name = "Dale Carman", email = "dale@groovejones.com"}]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
	"anthropic>=0.18.0",
	"typer>=0.9.0",
	"rich>=13.7.0",
	"python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=7.4.0",
	"pytest-cov>=4.1.0",
	"ruff>=0.1.0",
	"mypy>=1.0.0",
]

[project.scripts]
slack-insights = "slack_insights.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
	"--verbose",
	"--cov=src/slack_insights",
	"--cov-report=term-missing",
	"--cov-report=html",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["W191"]  # Allow tabs (per code-style.md)

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
